[tool.poetry]
name = "project"
version = "1.2.0"
description = "Simple project to test the setup-python action."
authors = ["Hassan Abouelela <hassan@hassanamr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
mypy = "*"
six = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
black = "*"

[tool.poetry.extras]
extras = ["six"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
